# testify

./: CONTRACTS.md  Cargo.toml  LICENSE  README.md  flake.nix
abstractions/: Cargo.toml
abstractions/src/: lib.rs
examples/crate_0/: Cargo.toml  contracts.toml  hello.rs
examples/crate_0/src/: lib.rs
marshalling/: Cargo.toml
marshalling/src/: lib.rs
src/: complex_input_value.rs  driver.rs  imported.rs  lib.rs  llm.rs  main.rs  pool.rs  precondition_tester.rs  prelude.rs  utils.rs
src/krate/: hax.rs  mod.rs  server.rs  tarpaulin.rs  workspace.rs
src/subst/: mod.rs  rules.rs  syn_utils.rs  visitors.rs
tests/: test-llm.toml
tests/coverage/: assertions.rs  main.rs
tests/coverage/example-crate/: Cargo.toml
tests/coverage/example-crate/src/: lib.rs
tests/example-crate/src/: lib.rs
tests/libcore_legacy_contracts/: imported.rs  main.rs
tests/llm_contract_gen/: main.rs
