[package]
name = "testify"
version = "0.1.0"
edition = "2021"
default-run = "testify"

[[bin]]
name = "testify"
path = "src/main.rs"

[[bin]]
name = "test-libcore-legacy-contracts"
path = "tests/libcore_legacy_contracts/main.rs"

[[bin]]
name = "test-coverage"
path = "tests/coverage/main.rs"

[dependencies]
extension-traits = "2.0.0"
fmt-derive = "0.1.2"
itertools = "0.13.0"
once_cell = "1.19.0"
proc-macro2 = {version = "1.0.85", features = ["span-locations"]}
quote = "1.0.36"
rand = "0.8.5"
syn = { version = "2.0.66", features = ["extra-traits", "full", "parsing", "printing", "visit", "visit-mut"] }
tempfile = "3.10.1"
tinytemplate = "1.2.1"
hax-frontend-exporter = { git = "https://github.com/hacspec/hax.git", default-features = false }
hax-types = { git = "https://github.com/hacspec/hax.git", default-features = false }
serde = "1.0"
serde_json = "1.0"
memoize = "0.4.2"
duplicate = "1.0.0"
prettyplease = "0.2.20"
marshalling = { path = "marshalling" }
arbitrary = "1.3.2"
anyhow = "1.0.86"
thiserror = "1.0.63"
cargo_metadata = "0.19.1"
regex = "1.11.1"
colored = "2.1.0"
which = "7.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8.19"
clap = "4.5.22"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde-jsonlines = "0.6.0"
rand_chacha = "0.9.0"
